syntax = "proto3";

import "google/protobuf/empty.proto";

package pir;

service Pir{
  rpc SaveContext(stream PirContext) returns (google.protobuf.Empty) {}
  rpc GetResponse(PirRequest) returns (PirResponse) {}
  rpc GetIndexTree(google.protobuf.Empty) returns (IndexTreeResponse) {}
}

message PirContext{
  bytes ctx = 1;
}

message IndexTreeResponse{
  string idx_tree = 1;
}

message PirRequest{
  bytes row = 1;
  bytes col = 2;
}

message PirResponse{
  bytes response = 1;
}
